--- a/style.css
+++ b/style.css
@@ -1,9 +1,35 @@
-ul  {
-    display: block;
-    list-style-type: disc;
-    margin-top: 1em;
-    margin-bottom: 1 em;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 40px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.topnav {
+    display: flex;
+   
+
+}
+
+.appTitle {
+    color:#21b3fc ;
+    padding-left: 10px;
+    padding-right: 250px;
+    padding-top: 20px;
+    font-size: 15px;
+    font-weight: 400;
+    text-decoration: none;
+   
+}
+
+.menus {
+    display: flex;
+    padding-top: 20px;
+    padding: 10px 0;
+}
+
+.menus  a {
+    color: black;
+    text-decoration: none;
+    padding: 10px 10px;
+
 }
