--- a/style.css
+++ b/style.css
@@ -33,3 +33,15 @@
     padding: 10px 10px;
 
 }
+
+.download_button {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+}
+
+.download_button a {
+    padding-left: 30px;
+}
