--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 
 .topnav {
     display: flex;
-   
+    padding-bottom: 20px;
+    justify-content: center;
 
 }
 
 .appTitle {
     color:#21b3fc ;
-    padding-left: 10px;
     padding-right: 250px;
     padding-top: 20px;
     font-size: 15px;
@@ -45,3 +45,12 @@
 .download_button a {
     padding-left: 30px;
 }
+
+.mini_body {
+    width: 100%;
+    height: 30%;
+    margin: 0;
+    padding: 0;
+    background-image: url('images/image_father_and_girl.jpg');
+}
+
